@@ -392,7 +392,7 @@ public class GeotiffAdapter {
      * @return  key value or dflt
      */
     private int getGeoKey(int key, int dflt) {
-        double[] v = (double[]) keys.get(new Integer(key));
+        double[] v = (double[]) keys.get(Integer.valueOf(key));
         if (v == null) {
             return dflt;
         }
@@ -407,7 +407,7 @@ public class GeotiffAdapter {
      * @return  key value or dflt
      */
     private double[] getGeoKey(int key, double[] dflt) {
-        double[] v = (double[]) keys.get(new Integer(key));
+        double[] v = (double[]) keys.get(Integer.valueOf(key));
         if (v == null) {
             return dflt;
         }
@@ -439,7 +439,7 @@ public class GeotiffAdapter {
      * @param value       value
      */
     private void processKey(int geoKeyId, double[] value) {
-        keys.put(new Integer(geoKeyId), value);
+        keys.put(Integer.valueOf(geoKeyId), value);
     }
 
 
@@ -572,7 +572,7 @@ public class GeotiffAdapter {
                 int    code  = pcs.findIntByName("parameterCode" + num);
                 int    uom   = pcs.findIntByName("parameterUom" + num);
                 double value = pcs.findDoubleByName("parameterValue" + num);
-                paramCodeMap.put(new Integer(code), new double[] { value,
+                paramCodeMap.put(Integer.valueOf(code), new double[] { value,
                         (double) uom });
             } catch (Exception exc) {
                 break;
@@ -588,7 +588,7 @@ public class GeotiffAdapter {
      * @return  true if we have it
      */
     private boolean hasParamCode(int code) {
-        double[] valueAndUom = (double[]) paramCodeMap.get(new Integer(code));
+        double[] valueAndUom = (double[]) paramCodeMap.get(Integer.valueOf(code));
         return (valueAndUom != null);
     }
 
@@ -600,7 +600,7 @@ public class GeotiffAdapter {
      * @return  value for code or dflt
      */
     private double getParamCodeValue(int code, double dflt) {
-        double[] valueAndUom = (double[]) paramCodeMap.get(new Integer(code));
+        double[] valueAndUom = (double[]) paramCodeMap.get(Integer.valueOf(code));
         if (valueAndUom != null) {
             return valueAndUom[0];
         }
